--- a/pom.xml
+++ b/pom.xml
@@ -623,9 +623,9 @@
                         <changeLogFile>${project.basedir}/src/main/resources/config/liquibase/master.xml</changeLogFile>
                         <diffChangeLogFile>${project.basedir}/src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                         <driver>org.postgresql.Driver</driver>
-                        <url>jdbc:postgresql://localhost:5432/product</url>
+                        <url>jdbc:postgresql://localhost:5432/store</url>
                         <defaultSchemaName></defaultSchemaName>
-                        <username>product</username>
+                        <username>store</username>
                         <password></password>
                         <referenceUrl>hibernate:spring:com.sapo.pay.product.domain?dialect=tech.jhipster.domain.util.FixedPostgreSQL10Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                         <verbose>true</verbose>
