--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -25,7 +25,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
+      defaultZone: http://admin:${jhipster.registry.password}@192.168.64.226:8761/eureka/
 
 spring:
   devtools:
@@ -39,21 +39,22 @@ spring:
       indent-output: true
   cloud:
     config:
-      uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+      uri: http://admin:${jhipster.registry.password}@192.168.64.226:8761/config
       # name of the config server's property source (file.yml) that we want to use
       name: product
       profile: dev
       label: main # toggle to switch to a different version of the configuration as stored in git
       # it can be set to any label, branch or commit of the configuration source Git repository
+      enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/store
+    url: jdbc:postgresql://localhost:5432/store?ApplicationName=product
     username: store
     password:
     hikari:
       poolName: Hikari
       auto-commit: false
-      minimum-idle: 5
+      minimum-idle: 1
       maximum-pool-size: 20
   jpa:
     database-platform: tech.jhipster.domain.util.FixedPostgreSQL10Dialect
